added new code User Service is communacting with Hotelservice and Rating Service